test/schemas/fail/version_dupes.sat
schema Pos #2 {}

// ERROR: schemas/fail/version_dupes.sat(4): Schema versions overlap with previous declaration: Pos
schema Pos #2 {}

schema Pos #3 {}

// ERROR: schemas/fail/version_dupes.sat(11): Schema versions overlap with previous declaration: Pos
// ERROR: schemas/fail/version_dupes.sat(11): Schema versions overlap with previous declaration: Pos
// ERROR: schemas/fail/version_dupes.sat(11): Schema versions overlap with previous declaration: Pos
schema Pos #1..3 {}

schema Pos #4..5 {
    int32 x #4..5;
    // ERROR: schemas/fail/version_dupes.sat(16): Schema field version already defined: Pos.x#4
    int32 x #4;
    // ERROR: schemas/fail/version_dupes.sat(18): Schema field version already defined: Pos.x#5
    int32 x #5;
}

// ERROR: schemas/fail/version_dupes.sat(22): Type already defined: Pos
struct Pos {}

struct Vec {}
// ERROR: schemas/fail/version_dupes.sat(26): Type already defined: Vec
schema Vec#2 {}

// ERROR: schemas/fail/version_dupes.sat(29): Version must be positive: 0
schema Zero#0 {}
